
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef enum secure_packet_direction { ____Placeholder_secure_packet_direction } secure_packet_direction ;
typedef int RpcPktHdr ;
typedef int RpcConnection ;
typedef int RpcAuthVerifier ;
typedef int RPC_STATUS ;


 int RPC_S_OK ;

__attribute__((used)) static RPC_STATUS rpcrt4_ncalrpc_secure_packet(RpcConnection *conn,
    enum secure_packet_direction dir,
    RpcPktHdr *hdr, unsigned int hdr_size,
    unsigned char *stub_data, unsigned int stub_data_size,
    RpcAuthVerifier *auth_hdr,
    unsigned char *auth_value, unsigned int auth_value_size)
{


    return RPC_S_OK;
}
